# hellolib

./: .gitignore  default.nix  flake.nix
hellolib/: CMakeLists.txt
hellolib/cmake/: HelloWorldLibraryConfig.cmake.in
hellolib/src/: hellolib.cpp
include/: hellolib.h
